Formulier index gemaakt en returns op de formulieren naar de index

--- a/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
@@ -179,7 +179,10 @@
             {
                 beoordelingenJson: beoordelingenToPost,
                 handtekeningenJson: handtekeningenToPost,
-                stageID: "@Model.StageID"
+                stageID: @Model.StageID
+            },
+            success:function(dataresponse){
+                window.location = '/Formulier/StudentIndex?StageID=' + dataresponse
             }
         });
     });
