--- a/PVB Stage Applicatie/Views/TussentijdseBeeindiging/CreateBeeindeging.cshtml
+++ b/PVB Stage Applicatie/Views/TussentijdseBeeindiging/CreateBeeindeging.cshtml
@@ -82,6 +82,9 @@
             {
                 tussentijdseBeeindigingJson: jsonToPost,
                 stageID: @Model.StageID
+            },
+            success:function(dataresponse){
+                window.location = '/Formulier/StudentIndex?StageID=' + dataresponse
             }
         });
     }
