--- a/PVB Stage Applicatie/Views/Bedrijf/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Create.cshtml
@@ -45,6 +45,7 @@
         <p>
             <input type="submit" value="Create" />
         </p>
+        <p>@Html.Encode(ViewData["Foutmelding"])</p>
     </fieldset>
 }
 
