--- a/PVB Stage Applicatie/Views/Docent/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Index.cshtml
@@ -6,7 +6,7 @@
 @section zijMenu{
     <ul>
         <li>@Html.ActionLink("Nieuwe docent", "Create")</li>
-        <li>@Html.ActionLink("Bulk invoer", "")</li>
+        <li>@Html.ActionLink("Bulk invoer", "BulkInvoerDocent")</li>
     </ul>
 }
 <h2>Index</h2>
