--- a/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
@@ -70,6 +70,7 @@
         <p>
             <input type="submit" value="Save" />
         </p>
+        <p>@Html.Encode(ViewData["Foutmelding"])</p>
     </fieldset>
 }
 
