--- a/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
@@ -11,7 +11,7 @@
     @section zijMenu{
         <ul>
             <li>@Html.ActionLink("Nieuw bedrijf", "Create")</li>
-            <li>@Html.ActionLink("Bulk invoer", "")</li>
+            <li>@Html.ActionLink("Bulk invoer", "BulkInvoerBedrijf")</li>
         </ul>
     }
 }
