--- a/PVB Stage Applicatie/Views/Begeleider/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Create.cshtml
@@ -101,6 +101,7 @@
         <p>
             <input type="submit" value="Create" />
         </p>
+        <p>@Html.Encode(ViewData["Foutmelding"])</p>
     </fieldset>
 }
 
