--- a/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
@@ -146,6 +146,8 @@
         <p>
             <input type="submit" value="Save" />
         </p>
+        <p>@Html.Encode(ViewData["Foutmelding"])</p>
+
     </fieldset>
 }
 
