--- a/PVB Stage Applicatie/Views/Periode/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Index.cshtml
@@ -10,6 +10,7 @@
     </ul>
 }
 <h2>Index</h2>
+<p>@Html.Encode(ViewData["KanAanpassen"])</p>
 <table>
     <tr>
         <th>
@@ -27,7 +28,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.ActionLink("" + item.Periode1, "Details", new { id = item.Periode1 })
+            @Html.DisplayFor(modelItem => item.Periode1)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Begindatum)
@@ -37,7 +38,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new {  id=item.Periode1  }) |
-            @*@Html.ActionLink("Details", "Details", new { id = item.Periode1 }) |*@
+            @Html.ActionLink("Details", "Details", new { id = item.Periode1 }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Periode1 })
         </td>
     </tr>
