--- a/PVB Stage Applicatie/Views/Periode/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Details.cshtml
@@ -15,7 +15,7 @@
 }
 <h2>Details</h2>
 
-<fieldset>
+<fieldset class ="details-field">
     <legend>Periode</legend>
 
     <div class="display-label">
