--- a/PVB Stage Applicatie/Views/Docent/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Details.cshtml
@@ -20,87 +20,87 @@
 
 <h2>Details</h2>
 
-<fieldset>
+<fieldset class="details-field">
     <legend>Persoonsgegevens</legend>
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Voornaam)
+        @Html.DisplayNameFor(model => model.Voornaam)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Voornaam)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Achternaam)
+        @Html.DisplayNameFor(model => model.Achternaam)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Achternaam)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Tussenvoegsel)
+        @Html.DisplayNameFor(model => model.Tussenvoegsel)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Tussenvoegsel)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Email)
+        @Html.DisplayNameFor(model => model.Email)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Email)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Straat)
+        @Html.DisplayNameFor(model => model.Straat)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Straat)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Huisnummer)
+        @Html.DisplayNameFor(model => model.Huisnummer)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Huisnummer)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Toevoeging)
+        @Html.DisplayNameFor(model => model.Toevoeging)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Toevoeging)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Postcode)
+        @Html.DisplayNameFor(model => model.Postcode)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Postcode)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Plaats)
+        @Html.DisplayNameFor(model => model.Plaats)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Plaats)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Actief)
+        @Html.DisplayNameFor(model => model.Actief)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Actief)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.NonActiefReden)
+        @Html.DisplayNameFor(model => model.NonActiefReden)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.NonActiefReden)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.MedewerkerID)
+        @Html.DisplayNameFor(model => model.MedewerkerID)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.MedewerkerID)
