--- a/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
@@ -16,7 +16,7 @@
 
 <h2>Details</h2>
     
-<fieldset>
+<fieldset class="details-field">
     <legend>Persoonsgegevens</legend>
 
     <div class="display-label">
