--- a/PVB Stage Applicatie/Views/Login/index.cshtml
+++ b/PVB Stage Applicatie/Views/Login/index.cshtml
@@ -2,54 +2,37 @@
 @{
     ViewBag.Title = "Login";
 }
-@*@{
-    Layout = null;
-}
-
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>index</title>
-</head>
-<body>
-    <script src="~/Scripts/jquery-1.8.2.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
     
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
     
-        <fieldset>
-            <legend>LoginForm</legend>
-    
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Gebruikersnaam)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.Gebruikersnaam)
-                @Html.ValidationMessageFor(model => model.Gebruikersnaam)
-            </div>
-    
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Wachtwoord)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.Wachtwoord)
-                @Html.ValidationMessageFor(model => model.Wachtwoord)
-            </div>
-    
-            <p>
-                <input type="submit" value="Create" />
-            </p>
-        </fieldset>
+    if (Model != null && !Model.correct)
+    {
+        <script>alert("Gebruikersnaam of wachtwoord incorrect")</script>
     }
     
-    @*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
-@*</body>
-</html>*@
+    <fieldset>
+        <legend>LoginForm</legend>
+    
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Gebruikersnaam)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Gebruikersnaam)
+            @Html.ValidationMessageFor(model => model.Gebruikersnaam)
+        </div>
+    
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Wachtwoord)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Wachtwoord)
+            @Html.ValidationMessageFor(model => model.Wachtwoord)
+        </div>
+    
+        <p>
+            <input type="submit" value="Create" />
+        </p>
+    </fieldset>
+}
