--- a/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
@@ -39,7 +39,7 @@
         foreach (var link in links)
         {
             @:
-            <li class="menuItem"> @Html.ActionLink(link.LinkText, link.ActionName, link.ControllerName)</li>
+            <li class="menuItem"> @Html.ActionLink(link.LinkText, link.ActionName, link.ControllerName, null, new { @class = "menuknop"})</li>
         }
         
     }
