--- a/PVB Stage Applicatie/Views/Bedrijf/BulkInvoerBedrijf.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/BulkInvoerBedrijf.cshtml
@@ -4,6 +4,9 @@
     @section zijMenu{
         <ul>
             <li>@Html.ActionLink("Terug", "index")</li>
+            <li>
+@Html.ActionLink("Download Template", "Download", "Bedrijf")
+            </li>
         </ul>
     }
 <h2>Bulk Invoer Bedrijf</h2>
