--- a/PVB Stage Applicatie/Views/Begeleider/BulkInvoerBegeleider.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/BulkInvoerBegeleider.cshtml
@@ -1,7 +1,14 @@
 ﻿@{
     ViewBag.Title = "Bulk Invoer Begeleider";
 }
-
+@section zijMenu{
+    <ul>
+        <li>@Html.ActionLink("Terug", "index")</li>
+        <li>
+            @Html.ActionLink("Download Template", "Download", "Begeleider")
+        </li>
+    </ul>
+}
 <h2>BulkInvoerBegeleider</h2>
 @using (Html.BeginForm("BulkInvoer", "Begeleider", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
