--- a/PVB Stage Applicatie/Views/Begeleider/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Index.cshtml
@@ -8,7 +8,7 @@
 @section zijMenu{
     <ul>
         <li>@Html.ActionLink("Nieuwe begeleider", "Create")</li>
-        <li>@Html.ActionLink("Bulk invoer", "")</li>
+        <li>@Html.ActionLink("Bulk invoer", "BulkInvoerBegeleider")</li>
     </ul>
 }
 <table>
