--- a/PVB Stage Applicatie/Views/Bedrijf/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Create.cshtml
@@ -20,15 +20,17 @@
 @{
     ViewBag.Title = "Create";
 }
-    @section zijMenu{
-        <ul>
-            <li>@Html.ActionLink("Terug", "Index")</li>
-        </ul>
-    }
 
-<h2>Create</h2>
+@section zijMenu{
+    <ul>
+        <li>@Html.ActionLink("Terug", "Index")</li>
+    </ul>
+}
 
-@using (Html.BeginForm()) {
+<h2>View1</h2>
+
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -36,18 +38,106 @@
         <legend>Bedrijf</legend>
 
         <div class="editor-label">
-            Bedrijfsnaam
+            @Html.LabelFor(model => model.Naam)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Naam)
             @Html.ValidationMessageFor(model => model.Naam)
         </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Actief)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Actief)
+            @Html.ValidationMessageFor(model => model.Actief)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.NonActiefReden)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.NonActiefReden)
+            @Html.ValidationMessageFor(model => model.NonActiefReden)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.KvKNummer)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.KvKNummer)
+            @Html.ValidationMessageFor(model => model.KvKNummer)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Plaats)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Plaats)
+            @Html.ValidationMessageFor(model => model.Plaats)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Straatnaam)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Straatnaam)
+            @Html.ValidationMessageFor(model => model.Straatnaam)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Huisnummer)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Huisnummer)
+            @Html.ValidationMessageFor(model => model.Huisnummer)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Toevoeging)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Toevoeging)
+            @Html.ValidationMessageFor(model => model.Toevoeging)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Postcode)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Postcode)
+            @Html.ValidationMessageFor(model => model.Postcode)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Telefoonnummer)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Telefoonnummer)
+            @Html.ValidationMessageFor(model => model.Telefoonnummer)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Email)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Email)
+            @Html.ValidationMessageFor(model => model.Email)
+        </div>
+
         <p>
             <input type="submit" value="Create" />
         </p>
-        <p>@Html.Encode(ViewData["Foutmelding"])</p>
+        <p>
+            @Html.Encode(ViewData["Foutmelding"])
+        </p>
+
     </fieldset>
 }
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
