--- a/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
@@ -15,6 +15,7 @@
         </ul>
     }
 }
+
 <table>
     <tr>
         <th>
@@ -24,12 +25,33 @@
             @Html.DisplayNameFor(model => model.Actief)
         </th>
         <th>
-            Reden non-actief
+            @Html.DisplayNameFor(model => model.NonActiefReden)
         </th>
-@if (User.IsInRole("Beheerder"))
-{
+        <th>
+            @Html.DisplayNameFor(model => model.KvKNummer)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Plaats)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Straatnaam)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Huisnummer)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Toevoeging)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Postcode)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Telefoonnummer)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
         <th></th>
-}
     </tr>
 
     @foreach (var item in Model)
@@ -44,21 +66,36 @@
             <td>
                 @Html.DisplayFor(modelItem => item.NonActiefReden)
             </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KvKNummer)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Plaats)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Straatnaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Huisnummer)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Toevoeging)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Postcode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telefoonnummer)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
             @if (User.IsInRole("Beheerder"))
             {
-                <td>
-
-                    @Html.ActionLink("Edit", "Edit", new { id = item.BedrijfID })
-                </td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.BedrijfID })
             }
-
+            </td>
         </tr>
-
     }
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
 </table>
