Validatie op modelniveau

--- a/PVB Stage Applicatie/Views/Stagiair/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Edit.cshtml
@@ -158,6 +158,8 @@
         <p>
             <input type="submit" value="Save" />
         </p>
+        <p>@Html.Encode(ViewData["Foutmelding"])</p>
+
     </fieldset>
 }
 
