--- a/PVB Stage Applicatie/Views/Stagiair/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Create.cshtml
@@ -1,5 +1,17 @@
 ﻿@model PVB_Stage_Applicatie.Models.Persoonsgegevens
+<script>
+    $(document).ready(function (event) {
+        $('form').on('submit', function () {
+            if($("#StudentNummer")[0].value == "")
+            {
+                debugger;
+                $("#StudentNummerMessage")[0].innerHTML = "OEPSIE";
+                event.preventDefault();
+            }
+        });
+    })
 
+</script>
 @{
     ViewBag.Title = "Create";
 }
@@ -97,7 +109,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.StudentNummer)
-            @Html.ValidationMessageFor(model => model.StudentNummer)
+            @Html.ValidationMessageFor(model => model.StudentNummer, "", new { id = "studentNummerMessage"  })
         </div>
 
         <div class="editor-label">
@@ -127,3 +139,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
