--- a/PVB Stage Applicatie/Views/GespreksFormulier/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/GespreksFormulier/Edit.cshtml
@@ -15,29 +15,29 @@
 
         @Html.HiddenFor(model => model.GespreksformulierID)
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => model.Stage, "Stage1")
         </div>
         <div class="editor-field">
             @Html.DropDownList("Stage", String.Empty)
             @Html.ValidationMessageFor(model => model.Stage)
-        </div>
+        </div>*@
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => model.Datum)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Datum)
             @Html.ValidationMessageFor(model => model.Datum)
-        </div>
+        </div>*@
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => model.ContactType)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.ContactType)
             @Html.ValidationMessageFor(model => model.ContactType)
-        </div>
+        </div>*@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Gesprek)
