StageID parameter naar ID & edit van gesprek

--- a/PVB Stage Applicatie/Views/Beoordeling/CreateFormulier.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/CreateFormulier.cshtml
@@ -500,7 +500,7 @@
 <script src="~/Scripts/mousecontroller.js"></script>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug", "StudentIndex", "Formulier", new { id = Model.StageID }, null)
 </div>
 
 @section Scripts {
