--- a/PVB Stage Applicatie/Views/Beoordeling/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/Details.cshtml
@@ -387,8 +387,7 @@
     </table>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.BeoordelingID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug", "StudentIndex", "Formulier", new { id = Model.Stage }, null)
 </p>
 
 
