--- a/PVB Stage Applicatie/Views/GespreksFormulier/CreateGespreksFormulier.cshtml
+++ b/PVB Stage Applicatie/Views/GespreksFormulier/CreateGespreksFormulier.cshtml
@@ -142,7 +142,7 @@
 
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug", "StudentIndex", "Formulier", new { id = Model.StageID }, null)
 </div>
 
 @section Scripts {
