--- a/PVB Stage Applicatie/Views/GespreksFormulier/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/GespreksFormulier/Edit.cshtml
@@ -34,7 +34,9 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug", "StudentIndex", "Formulier", new { id = Model.Stage }, null)
+
+
 </div>
 
 @section Scripts {
