--- a/PVB Stage Applicatie/Views/TussentijdseBeeindiging/Details.cshtml
+++ b/PVB Stage Applicatie/Views/TussentijdseBeeindiging/Details.cshtml
@@ -45,6 +45,6 @@
     </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id=Model.PrimaryKey */ }) |
     @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug", "StudentIndex", "Formulier", new { id = Model.Stage }, null)
 </p>
