Knoppen namen gegeven

--- a/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
@@ -497,7 +497,7 @@
         <td align="center" valign="middle"><input class="clsbtn" value="Clear" type="button" onclick="ClearCanvas('s')" /></td>
     </tr>
 </table>
-<input type="button" id="klikje" />
+<input type="button" id="klikje" value="Create"/>
 <script src="~/Scripts/mousecontroller.js"></script>
 
 <div>
