--- a/PVB Stage Applicatie/Views/TussentijdseBeeindiging/CreateBeeindeging.cshtml
+++ b/PVB Stage Applicatie/Views/TussentijdseBeeindiging/CreateBeeindeging.cshtml
@@ -47,7 +47,7 @@
 
 <br />
 
-<input type="button" value="Submit" onclick="JahoorStuurMaar()"/>
+<input type="button" value="Create" onclick="JahoorStuurMaar()"/>
 
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
