--- a/PVB Stage Applicatie/Views/Login/index.cshtml
+++ b/PVB Stage Applicatie/Views/Login/index.cshtml
@@ -32,7 +32,7 @@
         </div>
     
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Login" />
         </p>
     </fieldset>
 }
