--- a/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
@@ -38,18 +38,14 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
+    @*<fieldset>
         <legend>Bedrijf</legend>
 
         @Html.HiddenFor(model => model.BedrijfID)
         @Html.HiddenFor(model => model.Naam)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Naam)
-        </div>
-        <div class="editor-field">
-            @Html.DisplayFor(model => model.Naam)
-        </div>
+
+
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Actief)
@@ -71,9 +67,107 @@
             <input type="submit" value="Save" />
         </p>
         <p>@Html.Encode(ViewData["Foutmelding"])</p>
-    </fieldset>
-}
+    </fieldset>*@
 
+<fieldset>
+    <legend>Bedrijf</legend>
+
+    @Html.HiddenFor(model => model.BedrijfID)
+    @Html.HiddenFor(model => model.Naam)
+
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Naam)
+    </div>
+    <div class="editor-field">
+        @Html.DisplayFor(model => model.Naam)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Actief)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Actief)
+        @Html.ValidationMessageFor(model => model.Actief)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.NonActiefReden)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.NonActiefReden)
+        @Html.ValidationMessageFor(model => model.NonActiefReden)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.KvKNummer)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.KvKNummer)
+        @Html.ValidationMessageFor(model => model.KvKNummer)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Plaats)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Plaats)
+        @Html.ValidationMessageFor(model => model.Plaats)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Straatnaam)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Straatnaam)
+        @Html.ValidationMessageFor(model => model.Straatnaam)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Huisnummer)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Huisnummer)
+        @Html.ValidationMessageFor(model => model.Huisnummer)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Toevoeging)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Toevoeging)
+        @Html.ValidationMessageFor(model => model.Toevoeging)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Postcode)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Postcode)
+        @Html.ValidationMessageFor(model => model.Postcode)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Telefoonnummer)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Telefoonnummer)
+        @Html.ValidationMessageFor(model => model.Telefoonnummer)
+    </div>
+
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Email)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Email)
+        @Html.ValidationMessageFor(model => model.Email)
+    </div>
+
+    <p>
+        <input type="submit" value="Save" />
+    </p>
+</fieldset>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
