--- a/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/CreateEindbeoordeling.cshtml
@@ -182,7 +182,7 @@
                 stageID: @Model.StageID
             },
             success:function(dataresponse){
-                window.location = '/Formulier/StudentIndex?StageID=' + dataresponse
+                window.location = '/Formulier/StudentIndex/' + dataresponse
             }
         });
     });
